--- a/posts.html
+++ b/posts.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog | Oli</title>
-
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="blogstyle.css">
-
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 
@@ -25,7 +23,7 @@
 
         <section class="section">
             <h2 id="post-title"></h2>
-            <p id="post-date" style="color: #ff69b4; margin-bottom: 20px;"></p>
+            <p id="post-date"></p>
             <div id="post-content" class="blog-content"></div>
         </section>
 
